@@ -270,6 +270,20 @@ In addition to that, when the tracing library is running in burst mode, it compu
 
 This section contains other configuration details that do not fit in the previous sections. Right now, there is only one option available and it is devoted to tell the instrumentation package the minimum instrumentation time. To enable it, set {\tt enabled} to "yes" and set the minimum time within the {\tt minimum-time} tag.
 
+\section{XML Section: Sampling}\label{sec:XMLSectionSampling}
+
+\input{XML/sampling.xml}
+
+This sections configures the time-based sampling capabilities. Every sample contains processor performance counters (if enabled in section \ref{subsec:ProcessorPerformanceCounters} and either PAPI or PMAPI are referred at configure time) and callstack information (if enabled in section \ref{sec:XMLSectionCallers} and proper dependencies are set at configure time).
+
+This section contains two attributes besides {\tt enabled}. These are
+\begin{itemize}
+ \item {\bf type}: determines which timer domain is used (see {\tt man 2 setitimer} or {\tt man 3p setitimer} for further information on time domains). Available options are: {\tt real} (which is also the {\tt default} value, {\tt virtual} and {\tt prof}.
+ \item {\bf period}: specifies the sampling periodicity. In the example above, samples are gathered every 50ms.
+\end{itemize}
+
+\graybox{See {\bf EXTRAE\_SAMPLING\_PERIOD}, {\bf EXTRAE\_SAMPLING\_CLOCKTYPE} and {\bf EXTRAE\_SAMPLING\_CALLER} environment variables in appendix \ref{cha:EnvVar}.}
+
 \section{XML Section: Merge}\label{sec:XMLSectionMerge}
 
 \input{XML/merge.xml}
