@@ -1,5 +1,5 @@
 \begin{verbatim}
-  <others enabled="yes">
-    <minimum-time enabled="no">10m</minimum-time>
-  </others>
+<others enabled="yes">
+  <minimum-time enabled="no">10m</minimum-time>
+</others>
 \end{verbatim}
