@@ -1,6 +1,6 @@
 \begin{verbatim}
-  <user-functions enabled="no" list="/home/bsc41/bsc41273/user-functions.dat">
-    <counters enabled="yes" />
-  </user-functions>
+<user-functions enabled="no" list="/home/bsc41/bsc41273/user-functions.dat">
+  <counters enabled="yes" />
+</user-functions>
 \end{verbatim}
 
