@@ -109,6 +109,8 @@ This appendix presents the environment variables the \TRACE package uses if {\tt
   \hline
   EXTRAE\_SAMPLING\_PERIOD & Enable time-sampling capabilities with the indicated period.\\
   \hline
+  EXTRAE\_SAMPLING\_CLOCKTYPE & Determines domain for sampling clock. Options are: DEFAULT, REAL, VIRTUAL and PROF.\\
+  \hline
   EXTRAE\_RUSAGE & Instrumentation emits resource usage at flush points if set to 1.\\
   \hline
   EXTRAE\_SPU\_DMA\_CHANNEL & Choose the SPU-PPU dma communication channel.\\
