@@ -65,6 +65,8 @@
     <spu-dma-channel enabled="yes">2</spu-dma-channel>
   </cell>
 
+  <sampling enabled="no" type="default" period="50m" />
+
   <merge enabled="yes" 
     synchronization="default"
     binary="mpi_ping"
