@@ -40,6 +40,8 @@
     <mpi-statistics enabled="yes" />
   </bursts>
 
+  <sampling enabled="no" type="default" period="50m" />
+
   <merge enabled="yes" 
     synchronization="default"
     binary="mpi_ping"
