@@ -40,6 +40,8 @@
     <memory-usage enabled="no" />
   </counters>
 
+  <sampling enabled="no" type="default" period="50m" />
+
   <merge enabled="yes" 
     synchronization="default"
     binary="mpi_ping"
