@@ -50,6 +50,8 @@
     <minimum-time enabled="no">10M</minimum-time>
   </others>
 
+  <sampling enabled="no" type="default" period="50m" />
+
   <merge enabled="yes" 
     synchronization="default"
     binary="pi"
