@@ -34,6 +34,8 @@
     <circular enabled="no" />
   </buffer>
 
+  <sampling enabled="no" type="default" period="50m" />
+
   <merge enabled="yes" 
     synchronization="default"
     binary="$UNICORE_BINARY$"
